--- a/gb/23/2/17/n13931726.md
+++ b/gb/23/2/17/n13931726.md
@@ -1,50 +1,50 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽约华男皇后区飙车 警拦截搜车见多袋毒品</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13931727-164052-600x400.png" />
 <h6>皇后区第23大道交100街的十字路口，两侧均有STOP停车标志，图片右侧为拉瓜迪亚机场万豪酒店。（谷歌地图）
 </h6>
 <hr>
-	<p>【大纪元2023年02月17日讯】（大纪元记者蔡溶<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）纽约两名<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E8%A3%94.md#1">华裔</a>男子本月初开着一辆白色<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%94%E9%A9%B0%E8%BD%A6.md#1">奔驰车</a>在皇后区<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A3%99%E8%BD%A6.md#1">飙车</a>，警车尾随在该车后面观察，目睹各种交通违规行为后，警方拦下车辆盘查，果然发现907克冰毒，随后依据非法持有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%92%E5%93%81.md#1">毒品</a>罪逮捕、送检查办。</p>
-<p>根据<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>东区联邦法庭起诉书，2月1日，执法人员看见一辆白色<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%94%E9%A9%B0%E8%BD%A6.md#1">奔驰车</a>（Mercedes-Benz）有异常驾驶行为，包括开车经过拉瓜迪亚机场万豪酒店门前、也就是皇后区第23大道交100街的十字路口时，无视这里的“充分停驶”（Full Stop）STOP停车标志，飞车而去。据美国交通规则，凡是遇“停车标志”，无论直行或是左、右转，首先要将车停在白线后，确定各方向都没有来车后才可通过路口。</p>
+	<p>【大纪元2023年02月17日讯】（大纪元记者蔡溶纽约报导）纽约两名华裔男子本月初开着一辆白色奔驰车在皇后区飙车，警车尾随在该车后面观察，目睹各种交通违规行为后，警方拦下车辆盘查，果然发现907克冰毒，随后依据非法持有毒品罪逮捕、送检查办。</p>
+<p>根据纽约东区联邦法庭起诉书，2月1日，执法人员看见一辆白色奔驰车（Mercedes-Benz）有异常驾驶行为，包括开车经过拉瓜迪亚机场万豪酒店门前、也就是皇后区第23大道交100街的十字路口时，无视这里的“充分停驶”（Full Stop）STOP停车标志，飞车而去。据美国交通规则，凡是遇“停车标志”，无论直行或是左、右转，首先要将车停在白线后，确定各方向都没有来车后才可通过路口。</p>
 <p>当时陈玲武（Lingwu Chen，音译）驾驶该车，林佳云（Jiayun Lin，音译）坐在乘客座位上。</p>
 <p>观察到他们的交通违规行为后，执法人员拦截下该车辆盘查。这时，两人中的一人将一个Target商店的可重复使用的袋子扔出了车辆的副驾驶座窗户。警察看见立即取来袋子，发现袋子里有一个夹链袋（Ziplock），里面似乎是冰毒（甲基苯丙胺）。</p>
 <p>警察又发现林佳云试图将一个夹链袋藏在车辆前排乘客门的夹层中。经过搜身检查，执法人员在林佳云的一个口袋里又发现了一个夹链袋，在车辆后排乘客座位上、一件陈玲武的棕色皮夹克里也发现了另一个夹链袋， 这些夹链袋里面装着疑似甲基苯丙胺晶体的东西。</p>
-<p>随后的现场测试证实，这些晶体实际上是冰毒。两人持有的冰毒总重量约为907克。此外，执法人员在陈玲武的一个口袋里发现了一个玻璃袋，里面有大约8克疑似是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%92%E5%93%81.md#1">毒品</a>K粉（氯胺酮）的东西。执法人员还在车内发现了大约3,900美元现金。</p>
+<p>随后的现场测试证实，这些晶体实际上是冰毒。两人持有的冰毒总重量约为907克。此外，执法人员在陈玲武的一个口袋里发现了一个玻璃袋，里面有大约8克疑似是毒品K粉（氯胺酮）的东西。执法人员还在车内发现了大约3,900美元现金。</p>
 <p>两人当场被逮捕，并于次日（2月2日）在纽约东区联邦法庭过堂。现在两人分别以5万美元保释金获得保释，庭外候审。</p>
 <p>责任编辑：陈玟绮</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/12/n13778926.md#1">走私市价120万冰毒 两男子在纽约无保获释</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/21/n13785921.md#1">纽约街头冰毒泛滥破纪录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/18/n13804901.md#1">悉尼查获748公斤冰毒 价值近7亿 三人落网</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/23/n13831065.md#1">警方查获80公斤冰毒市值8000万 5名男子被捕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/12/n13778926.md#1">走私市价120万冰毒 两男子在纽约无保获释</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/21/n13785921.md#1">纽约街头冰毒泛滥破纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/18/n13804901.md#1">悉尼查获748公斤冰毒 价值近7亿 三人落网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/23/n13831065.md#1">警方查获80公斤冰毒市值8000万 5名男子被捕</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14108863.md#1">【未解之谜】谁是中国新天子？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109270.md#1">专家：《蒋中正日记》是罕见国家领导人日记</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105634.md#1">【未解之谜】君王都怕的“赤马红羊”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/1/n14107751.md#1">推荐7本没有被政治污染的传统儿童书籍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101556.md#1">不死药的神话，从嫦娥说起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110872.md#1">【新闻大破解】国安特务抓金融外交 中共忧垮台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/4/n14109938.md#1">【马克时空】消耗战对俄有利 乌军如何突破僵局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110843.md#1">【新闻大家谈】李克强被害证据？中南海沉默</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/5/n14109999.md#1">以色列F-35战机击落巡弋导弹 创世界纪录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/5/n14110010.md#1">科学家意外发明新材料 可制造新一代半导体芯片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/5/n14110005.md#1">新研究发现庞大宇宙泡状结构横跨10亿光年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109533.md#1">宋慧乔晒与金惠秀合照 一称呼泄两人亲密关系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/4/n14109750.md#1">上海大妈追星坠骗局 8名“靳东”竟都是女子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/4/n14109774.md#1">BTS柾国创纪录 Solo专辑发行首日卖破200万张</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/5/n14110296.md#1">章子怡离婚后拒绝参加外界聚餐？巩俐曝原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/5/n14110329.md#1">被刘嘉玲带着走红毯 梁朝伟一举动引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14107124.md#1">亚马逊美容护肤品大促销 优惠精选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071196.md#1">“肾虚、肾亏”不是男人的专利 大龄女也要注意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/5/n14110116.md#1">吃烤焦的吐司会致癌？ 肿瘤学家如此解释</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/4/n14109949.md#1">真正好用又健康 铸铁锅 补铁还原水质</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14106544.md#1">【全植物蔬食料理】春笋葱油荞麦面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309168.md#1">【时事军事】乌成功闪击主因 或改变现代作战方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/17/n13931726.htm">纽约华男皇后区飙车 警拦截搜车见多袋毒品</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/17/n13931726.htm">纽约华男皇后区飙车 警拦截搜车见多袋毒品</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/17/n13931726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
